--- a/main.css
+++ b/main.css
@@ -8,6 +8,8 @@ html {
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
     scroll-behavior: smooth;
+    overflow-x: hidden;
+    max-width: 100vw;
 }
 
 html::-webkit-scrollbar {
@@ -16,11 +18,7 @@ html::-webkit-scrollbar {
 
 body {
     margin: 0;
-    display: inline;
-}
-
-body {
-    /*overflow-y: hidden;*/
+    max-width: 100vw;
 }
 
 h1 {
@@ -79,6 +77,8 @@ div {
 .fade_out_right {
     transform: translateX(20%);
     opacity: 0;
+    visibility: hidden;
+    max-height: 0;
 }
 
 .fade_out_down {
@@ -128,6 +128,7 @@ div {
     left: 50px;
     top: 25%;
     transition: all 1s ease-out;
+    width: 50%;
 }
 
 .text_freetime {
@@ -153,6 +154,7 @@ div {
     text-align: right;
     top: 25%;
     transition: all 1s ease-out;
+    visibility: visible;
 }
 
 .text_minecraft {
@@ -163,4 +165,5 @@ div {
     top: 35%;
     width: 600px;
     transition: all 1s ease-out;
+    visibility: visible;
 }
