--- a/main.css
+++ b/main.css
@@ -164,6 +164,14 @@ p {
     transition: all 1s ease-in-out;
 }
 
+.back4 a {
+    font-family: 'JetBrains Mono', sans-serif;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    font-size: 20px;
+}
+
 .imprint {
     position: absolute;
     width: 100%;
