--- a/main.css
+++ b/main.css
@@ -184,6 +184,7 @@ p {
     color: white;
     text-decoration: none;
     font-size: 14px;
+    font-weight: normal;
     position: relative;
     text-align: center;
     top: 30%;
